--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -45,6 +44,11 @@ header {
     padding: 15px 25px;
     margin: 20px;
     border-radius: 25px;
+}
+
+.header-computer{
+    display: flex;
+    align-items: center;
 }
 
 h1{
@@ -118,7 +122,7 @@ nav {
 /* ÉCRANS MOBILES */
 @media (max-width: 768px) {
     /* Cacher le menu classique de navigation */
-    .header-right {
+    nav {
         display: none;
     }
     
@@ -139,6 +143,31 @@ nav {
     .header-right.active {
         display: block;
     }
+
+    .header-mobile-right {
+        display: flex;
+        margin-left: auto;
+    }
+
+    .header-mobile-right a {
+        color: var(--white);
+        text-decoration: none;
+        padding: 10px 15px;
+        font-size: 18px;
+    }
+    #mobile-nav.active {
+        display: flex;
+    }
 }
 
+/* Cacher la navigation principale par défaut sur mobile */
+.header-mobile-right {
+    display: none;
+}
 
+header-mobile-right nav ul {
+    list-style: none;
+    padding: 0;
+    border-bottom: 2px solid var(--white);
+    vertical-align: middle;
+}
