--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-
+/* --------- Section main ---------- */
 :root{
     --violet:#9216a8;
     --grey:#2b2b2d;
@@ -23,6 +23,17 @@
     color: var(--white);
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    background: url(../images/pattern.png) repeat top left;
+    background-color: var(--grey);
+    font-size: 100%;
+
+    height: 3000px;
+}
+
+/* --------- Section header ---------- */
 header {
     position: fixed;
     background-image: 
@@ -164,12 +175,69 @@ header .fa-times{
     }
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    background: url(../images/pattern.png) repeat top left;
-    background-color: var(--grey);
-    font-size: 100%;
 
-    height: 3000px;
+
+
+
+
+/* --------- Section projets ---------- */
+.projects {
+    padding: 60px 0;
+}
+
+.projects h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 24px;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding : 0px 20px;
+}
+
+.project-card {
+    background-color: #333; /* Fond sombre */
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.project-card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-bottom: 1px solid #ddd;
+    transition: filter 0.3s; /* Animation de transition */
+}
+
+.project-card img:hover {
+    filter: brightness(50%); /* Assombrissement de l'image au survol */
+}
+
+
+.project-info {
+    padding: 20px;
+}
+
+.project-info h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #ddd; /* Couleur du texte du titre */
+}
+
+.project-info p {
+    font-size: 16px;
+    color: #d6d6d6; /* Couleur du texte de la description */
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 50px;
 }
