--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,8 @@ body{
 /* --------- Section header ---------- */
 header {
     position: fixed;
-    background-image: 
-    url(../images/scratch_texture.webp),
-    url(../images/header_background_blured3.webp);
-    background-size: cover;
+    background-image: url(../images/header_background_blured3.webp);
+    background-size: 100% auto;    
     background-position: center;
     background-repeat: no-repeat;
     background-color: var(--violet);
@@ -152,7 +150,6 @@ header .fa-times{
 
     header .nav_bar ul{
         background-image: 
-        url(../images/scratch_texture.webp),
         url(../images/header_background_blured3.webp);
         background-size: cover;
         background-position: center;
@@ -224,7 +221,7 @@ header .fa-times{
     padding: 20px;
 }
 
-.project-info h3 {
+.project-info h2 {
     margin-bottom: 10px;
     font-size: 20px;
     color: #ddd; /* Couleur du texte du titre */
