--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,10 @@ header .fa-times{
 
 
 
-
+/* --------- Section projets ---------- */
+#Main{
+    padding-top:100px;
+}
 
 
 /* --------- Section projets ---------- */
