--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ header .fa-times{
 
 
 
-/* --------- Section projets ---------- */
+/* --------- Section main ---------- */
 #Main{
     padding-top:100px;
 }
