--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-/* --------- Section main ---------- */
+/* --------- Variables CSS ---------- */
 :root{
     --violet:#9216a8;
     --grey:#2b2b2d;
@@ -10,11 +9,13 @@
     --grey2:#ffffff4d;
 }
 
+/* --------- Reset CSS et styles de base ---------- */
 *{
     font-family: "Roboto Condensed", sans-serif;
     text-decoration: none;
     outline: none;
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -24,20 +25,16 @@
 }
 
 body{
-    margin: 0;
-    padding: 0;
-    background: url(../images/pattern.png) repeat top left;
-    background-color: var(--grey);
+    background: url(../images/pattern.png) repeat top left, var(--grey);
     font-size: 100%;
-
     height: 3000px;
 }
 
-/* --------- Section header ---------- */
+/* --------- Header ---------- */
 header {
     position: fixed;
     background-image: url(../images/header_background_blured3.webp);
-    background-size: 100% auto;    
+    background-size: 100% auto;
     background-position: center;
     background-repeat: no-repeat;
     background-color: var(--violet);
@@ -47,7 +44,7 @@ header {
     margin: 20px;
     border-radius: 25px;
     width: calc(100% - 40px);
-    transition: .2s;
+    transition: 0.2s;
     z-index: 1000;
 }
 
@@ -59,7 +56,6 @@ h1{
 .title a {
     color: var(--white);
     font-size: 25px;
-    text-decoration: none;
     margin-left: 20px;
 }
 
@@ -70,14 +66,12 @@ h1{
 
 .nav_bar a {
     color: var(--white);
-    text-decoration: none;
     padding: 10px 15px;
     font-size: 18px;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
     border-bottom: 2px solid var(--white);
 }
 
@@ -92,7 +86,7 @@ nav li[active] a {
 nav li:hover {
     cursor: pointer;
     background: var(--grey2);
-    transition: .2s;
+    transition: 0.2s;
 }
 
 nav li[active]:hover {
@@ -111,7 +105,7 @@ header .fa-bars{
     font-size: 30px;
     cursor: pointer;
     display: none;
-    transition: .2s;
+    transition: 0.2s;
 }
 
 header .fa-times{
@@ -149,8 +143,7 @@ header .fa-times{
     }
 
     header .nav_bar ul{
-        background-image: 
-        url(../images/header_background_blured3.webp);
+        background-image: url(../images/header_background_blured3.webp);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -174,72 +167,86 @@ header .fa-times{
     }
 }
 
-
-
-/* --------- Section main ---------- */
-#Main{
-    padding-top:100px;
+/* --------- Main ---------- */
+.main{
 }
 
-
-/* --------- Section projets ---------- */
-.projects {
-    padding: 60px 0;
-}
-
-.projects h2 {
+/* --------- Intro ---------- */
+.intro {
+    width: 100%;
     text-align: center;
+    background-image: url(../images/backhome.png);
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    overflow: hidden;
+    padding-bottom: 60px;
+}
+
+.text_intro{
+    padding-top: 200px;
+    padding-bottom: 100px;
+}
+
+.intro .text_intro h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    color: var(--white);
+    text-shadow: 0 2px 5px rgba(146, 22, 168, 0.8);
+    z-index: 1;
+}
+
+.intro .text_intro h3 {
+    padding-top: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: normal;
+    font-size: 30px;
+    color: var(--white);
+    z-index: 1;
     margin-bottom: 30px;
-    font-size: 24px;
 }
 
-.project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding : 0px 20px;
+/* --------- Box Container ---------- */
+.box_container {
+    justify-content: center;
+    padding: 0 20px;
+    display: flex;
+    gap: 40px;
 }
 
-.project-card {
-    background-color: #333; /* Fond sombre */
+.box {
+    transition: 0.2s;
+    background-color: var(--grey);
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 300px;
 }
 
-.project-card img {
+.box img {
     width: 100%;
     height: auto;
     display: block;
-    border-bottom: 1px solid #ddd;
-    transition: filter 0.3s; /* Animation de transition */
+    border-bottom: 1px solid var(--white);
+    transition: filter 0.3s;
 }
 
-.project-card img:hover {
-    filter: brightness(50%); /* Assombrissement de l'image au survol */
+.box:hover {
+    filter: brightness(70%);
 }
 
-
-.project-info {
-    padding: 20px;
+.box .box_info {
+    padding: 10px;
 }
 
-.project-info h2 {
+.box_info h4 {
     margin-bottom: 10px;
     font-size: 20px;
-    color: #ddd; /* Couleur du texte du titre */
+    color: #ddd;
 }
 
-.project-info p {
-    font-size: 16px;
-    color: #d6d6d6; /* Couleur du texte de la description */
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-top: 50px;
+.box_info p {
+    font-size: 15px;
+    color: #d6d6d6;
 }
