--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,7 @@ header .fa-times{
 .text_intro{
     padding-top: 200px;
     padding-bottom: 100px;
+    margin: 0 20px;
 }
 
 .intro .text_intro h2 {
