--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ header .fa-times{
 .intro {
     width: 100%;
     text-align: center;
-    background-image: url(../images/backhome.png);
+    background-image: url(../images/backhome.webp);
     background-size: cover;
     background-position: center;
     z-index: 0;
