--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,9 @@ header .fa-times{
     }
 }
 
-/* --------- Main ---------- */
+/* --------- Main ---------- 
 .main{
-}
+}*/
 
 /* --------- Intro ---------- */
 .intro {
