--- a/css/style.css
+++ b/css/style.css
@@ -119,54 +119,6 @@ header .fa-times{
     border-radius: 0px;
 }
 
-@media (max-width:768px){
-
-    html{
-        font-size: 55%;
-    }
-
-    header .fa-bars{
-        display: block;
-        margin-left: auto;
-    }
-
-    header .nav_bar{
-        right: 20px;
-        position: fixed;
-        margin-top: 210px;
-        background: var(--violet);
-        text-align: center;
-        width: fit-content;
-        border-radius: 25px;
-        transform: translateX(125%);
-        transition: transform 0.2s ease-in-out;
-    }
-
-    header .nav_bar ul{
-        background-image: url(../images/header_background_blured3.webp);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-color: var(--violet);
-        flex-flow: column;
-        border-radius: 25px;
-        border-bottom: 0px;
-    }
-
-    header .nav_bar ul li {
-        display: block;
-    }
-
-    header .nav_bar.open {
-        transform: translateX(0%);
-        transition: transform 0.2s ease-in-out;
-    }
-
-    nav li[active] {
-        border-radius: 25px;
-    }
-}
-
 /* --------- Main ---------- 
 .main{
 }*/
@@ -180,12 +132,15 @@ header .fa-times{
     background-position: center;
     z-index: 0;
     overflow: hidden;
-    padding-bottom: 60px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .text_intro{
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 20vh;
+    padding-bottom: 5vh;
     margin: 0 20px;
 }
 
@@ -199,22 +154,22 @@ header .fa-times{
 }
 
 .intro .text_intro h3 {
-    padding-top: 25px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: normal;
     font-size: 30px;
     color: var(--white);
     z-index: 1;
-    margin-bottom: 30px;
+    margin-bottom: 10vh;
+    padding-top: 5vh;
 }
 
 /* --------- Box Container ---------- */
 .box_container {
     justify-content: center;
-    padding: 0 20px;
     display: flex;
     gap: 40px;
     flex-wrap: wrap;
+    padding: 0 20px;
 }
 
 .box {
@@ -253,3 +208,64 @@ header .fa-times{
     color: #d6d6d6;
 }
 
+
+
+
+
+
+
+@media (max-width:768px){
+
+    html{
+        font-size: 55%;
+    }
+
+    header .fa-bars{
+        display: block;
+        margin-left: auto;
+    }
+    header .nav_bar{
+        right: 20px;
+        position: fixed;
+        margin-top: 210px;
+        background: var(--violet);
+        text-align: center;
+        width: fit-content;
+        border-radius: 25px;
+        transform: translateX(125%);
+        transition: transform 0.2s ease-in-out;
+    }
+    header .nav_bar ul{
+        background-image: url(../images/header_background_blured3.webp);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: var(--violet);
+        flex-flow: column;
+        border-radius: 25px;
+        border-bottom: 0px;
+    }
+    header .nav_bar ul li {
+        display: block;
+    }
+    header .nav_bar.open {
+        transform: translateX(0%);
+        transition: transform 0.2s ease-in-out;
+    }
+    nav li[active] {
+        border-radius: 25px;
+    }
+
+    .intro {
+        padding-bottom: 60px;
+    }
+    .text_intro{
+        padding-top: 150px;
+        padding-bottom: 25px;
+    }
+    .intro .text_intro h3 {
+        padding-top: 25px;
+        margin-bottom: 30px;
+    }
+    
+}
