--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,10 @@ header .fa-times{
 
 .intro .text_intro h2 {
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
+    font-style: italic;
+    text-transform: uppercase;
     font-size: 50px;
     color: var(--white);
-    text-shadow: 0 2px 5px rgba(146, 22, 168, 0.8);
     z-index: 1;
 }
 
