--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,6 @@
     --white:#fff;
     --black:#0e101c;
     --grey2:#ffffff4d;
-
-    --border: 0.05em;
-    --shadow-primary: #0e101c;
-    --shadow-secondary: #9216a8;
-    --primary: var(--white);
-    --text-color: var(--white);
-
-    --clip-one: inset(0 0 0 0);
-    --clip-two: inset(0.2em 0 0.1em 0);
-    --clip-three: inset(0.4em 0 0.3em 0);
-    --clip-four: inset(0.6em 0 0.5em 0);
-    --clip-five: inset(0.8em 0 0.7em 0);
-    --clip-six: inset(0.1em 0 0.9em 0);
-    --clip-seven: inset(0.3em 0 0.7em 0);
-    --shimmy-distance: 3;
 }
 
 *{
@@ -44,24 +29,30 @@ body{
 }
 
 header {
+    /* Positionnement */
     position: fixed;
+    z-index: 1000;
+    width: calc(100% - 40px);
+    margin: 20px;
+
+    /* Box Model */
+    display: flex;
+    align-items: center;
+    padding: 7px 25px;
+
+    /* Arrière-plan */
     background-image: url(../images/header_background_blured3.webp);
     background-size: 100% auto;
     background-position: center;
     background-repeat: no-repeat;
     background-color: var(--violet);
-    display: flex;
-    align-items: center;
-    padding: 7px 25px;
-    margin: 20px;
+
+    /* Visuel */
     border-radius: 25px;
-    width: calc(100% - 40px);
     transition: 0.2s;
-    z-index: 1000;
 }
 
 h1{
-    font-family: 'Roboto Condensed', sans-serif;
     font-weight: normal;
 }
 
@@ -108,7 +99,6 @@ nav li[active]:hover {
 nav li {
     display: inline-block;
     padding: 7px 10px;
-    font-family: 'Roboto Condensed', sans-serif;
     font-size: 20px;
 }
 
@@ -132,18 +122,21 @@ header .fa-times{
 }
 
 .intro {
+    /* Box Model */
     width: 100%;
-    background-image: url(../images/backhome.webp);
-    background-size: cover;
-    background-position: bottom;
-    z-index: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
     padding-top: 20vh;
     padding-bottom: 5vh;
-    align-items: center
+
+    /* Arrière-plan */
+    background-image: url(../images/backhome.webp);
+    background-size: cover;
+    background-position: bottom;
+    z-index: 0;
 }
 
 .intro .image_intro{
@@ -158,97 +151,78 @@ header .fa-times{
     width: 100vh;
     height: auto;
     object-fit: contain;
-    max-width:60%
+    max-width:60%;
 }
 
 .text_intro{
+    width: 50%;
     padding-left: 10vh;
     padding-top: 5vh;
     text-align: left;
-    width: 50%;
 }
 
 .intro .text_intro h2 {
-    font-family: 'Roboto Condensed', sans-serif;
+    /* Typographie */
     font-style: italic;
     text-transform: uppercase;
     font-size: 50px;
     color: var(--white);
-    z-index: 1;
+
+    /* Positionnement */
     position: relative;
 }
 
 .intro .text_intro h2 span#dynamic-text {
     position: relative;
     display: inline-block;
-    color: var(--text-color);
+    color: var(--white);
     line-height: 1;
 }
 
 .intro .text_intro h3 {
-    font-family: 'Roboto Condensed', sans-serif;
+    /* Typographie */
     font-weight: normal;
     font-size: 30px;
     color: var(--white);
-    z-index: 1;
+
+    /* Box Model */
     margin-bottom: 10vh;
     padding-top: 10vh;
-    width: 100%;
+
 }
 
-.intro_2 {
+.presentation {
+    /* Box Model */
     width: 100%;
-    text-align: center;
-    background: url(../images/back2.webp);
-    background-size: cover;
-    background-position: top;
-    z-index: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 50px 0;
-}
 
-@media (max-width:823px){
-    .intro {
-        flex-direction: column-reverse;
-        padding-top: 10vh;
-    }
-    .intro .image_intro{
-        width: 100%;
-        padding-bottom:0;
-    }
-    .text_intro{
-        text-align: center;
-        width: 100%;
-        padding-left: 0;
-        padding-top:0;
-        justify-self: center;
-        padding-left:5%;
-        padding-right:5%;
-    }
-    .intro .text_intro h3 {
-        width:100%;
-    }
+    /* Arrière-plan */
+    background: url(../images/back2.webp);
+    background-size: cover;
+    background-position: top;
+    z-index: 0;
 }
 
 .box_container {
-    justify-content: center;
     display: flex;
-    gap: 40px;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 40px;
     padding: 20px 20px;
 }
 
 .box_intro {
-    transition: 0.2s;
+    width: 300px;
     background-color: var(--grey);
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    transition: 0.2s;
 }
 
 .box_intro img {
@@ -283,49 +257,6 @@ header .fa-times{
     font-size: 200%;
 }
 
-@media (max-width:823px){
-
-    html{
-        font-size: 55%;
-    }
-
-    header .fa-bars{
-        display: block;
-        margin-left: auto;
-    }
-    header .nav_bar{
-        right: 20px;
-        position: fixed;
-        margin-top: 210px;
-        background: var(--violet);
-        text-align: center;
-        width: fit-content;
-        border-radius: 25px;
-        transform: translateX(125%);
-        transition: transform 0.2s ease-in-out;
-    }
-    header .nav_bar ul{
-        background-image: url(../images/header_background_blured3.webp);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-color: var(--violet);
-        flex-flow: column;
-        border-radius: 25px;
-        border-bottom: 0px;
-    }
-    header .nav_bar ul li {
-        display: block;
-    }
-    header .nav_bar.open {
-        transform: translateX(0%);
-        transition: transform 0.2s ease-in-out;
-    }
-    nav li[active] {
-        border-radius: 25px;
-    }     
-}
-
 footer {
     text-align: center;
     opacity: 0.5;
@@ -349,14 +280,80 @@ footer h5 {
     color: #888991;
 }
 
-@media screen and (min-width: 823px) {
+
+/* --- Media Queries --- */
+
+@media (max-width: 823px){
+    html{
+        font-size: 55%;
+    }
+
+    /* Intro Section */
+    .intro {
+        flex-direction: column-reverse;
+        padding-top: 10vh;
+    }
+    .intro .image_intro{
+        width: 100%;
+        padding-bottom:0;
+    }
+    .text_intro{
+        text-align: center;
+        width: 100%;
+        padding-left: 0;
+        padding-top:0;
+        justify-self: center;
+        padding-left:5%;
+        padding-right:5%;
+    }
+    .intro .text_intro h3 {
+        width:100%;
+    }
+
+    /* Header & Navigation */
+    header .fa-bars{
+        display: block;
+        margin-left: auto;
+    }
+    header .nav_bar{
+        right: 20px;
+        position: fixed;
+        margin-top: 210px;
+        background: var(--violet);
+        text-align: center;
+        width: fit-content;
+        border-radius: 25px;
+        transform: translateX(125%);
+        transition: transform 0.2s ease-in-out;
+    }
+    header .nav_bar ul{
+        background-image: url(../images/header_background_blured3.webp);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        flex-flow: column;
+        border-radius: 25px;
+        border-bottom: 0px;
+    }
+    header .nav_bar ul li {
+        display: block;
+    }
+    header .nav_bar.open {
+        transform: translateX(0%);
+        transition: transform 0.2s ease-in-out;
+    }
+    nav li[active] {
+        border-radius: 25px;
+    }
+
+    /* Footer */
     footer h5 {
-        width: 50%;
+        width: 100%;
     }
 }
 
-@media screen and (max-width: 823px) {
+@media screen and (min-width: 823px) {
     footer h5 {
-        width: 100%;
+        width: 50%;
     }
 }
