--- a/css/style.css
+++ b/css/style.css
@@ -196,8 +196,8 @@ header .fa-times{
     width: 100%;
     min-height: 100vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
     padding: 50px 0;
 
@@ -206,6 +206,30 @@ header .fa-times{
     background-size: cover;
     background-position: top;
     z-index: 0;
+}
+
+.presentation .text_presentation h2 {
+    font-style: italic;
+    text-transform: uppercase;
+    font-size: 50px;
+    color: var(--white);
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    position: relative;
+}
+
+.presentation h3 {
+    /* Typographie */
+    font-weight: normal;
+    font-size: 25px;
+    color: var(--white);
+    text-align: center;
+
+    /* Box Model */
+    margin-bottom: 10vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    padding-top: 5vh;
 }
 
 .box_container {
@@ -245,17 +269,22 @@ header .fa-times{
     margin-bottom: 10px;
     font-size: 20px;
     color: #ddd;
+    text-align: center;
 }
 
 .box_info p {
     font-size: 15px;
     color: #d6d6d6;
+    text-align: center;
 }
 
 .box_container h2 {
     color:var(--white);
     font-size: 200%;
 }
+
+
+
 
 footer {
     text-align: center;
