--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header .fa-times{
     text-align: left;
 }
 
-.intro .text_intro h2 {
+h2 {
     /* Typographie */
     font-style: italic;
     text-transform: uppercase;
@@ -171,6 +171,7 @@ header .fa-times{
     /* Positionnement */
     position: relative;
 }
+
 
 .intro .text_intro h2 span#dynamic-text {
     position: relative;
@@ -191,6 +192,37 @@ header .fa-times{
 
 }
 
+.presentation h3 {
+    /* Typographie */
+    font-weight: normal;
+    font-size: 25px;
+    color: var(--white);
+    text-align: center;
+
+    /* Box Model */
+    margin-bottom: 10vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    padding-top: 5vh;
+}
+
+.nouveaux h3 {
+    /* Typographie */
+    font-weight: normal;
+    font-size: 30px;
+    color: var(--white);
+
+    /* Box Model */
+    margin-bottom: 10vh;
+    padding-top: 10vh;
+}
+
+
+.info{
+    padding-left: 5vh;
+    padding-top: 25vh
+}
+
 .presentation {
     /* Box Model */
     width: 100%;
@@ -208,36 +240,39 @@ header .fa-times{
     z-index: 0;
 }
 
-.presentation .text_presentation h2 {
-    font-style: italic;
-    text-transform: uppercase;
-    font-size: 50px;
-    color: var(--white);
-    padding-top: 10vh;
+
+.nouveaux {
+    /* Box Model */
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    padding-top: 15vh;
     padding-bottom: 5vh;
-    position: relative;
+
+    /* Arrière-plan */
+    background-image: url(../images/backhome.webp);
+    background-size: cover;
+    background-position: bottom;
+    z-index: 0;
 }
 
-.presentation h3 {
-    /* Typographie */
-    font-weight: normal;
-    font-size: 25px;
-    color: var(--white);
-    text-align: center;
+.nouveaux .box_container{
+    flex-direction: column;
+}
 
-    /* Box Model */
-    margin-bottom: 10vh;
-    margin-left: 10vh;
-    margin-right: 10vh;
-    padding-top: 5vh;
+.filler{
+    width: 100%;
 }
 
 .box_container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 40px;
-    padding: 20px 20px;
+    gap: 5vh;
+    padding: 5vh 5vh;
 }
 
 .box_intro {
@@ -278,9 +313,31 @@ header .fa-times{
     text-align: center;
 }
 
-.box_container h2 {
-    color:var(--white);
-    font-size: 200%;
+
+.box_nouveaux {
+    width: 100%;
+    background-color: var(--grey);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.box_nouveaux .box_info {
+    padding: 10px;
+    flex: 1;
+}
+
+.box_nouveaux img {
+    height: auto;
+    border-bottom: 1px solid var(--white);
+
+    width: 30%;
+    border-left: 1px solid var(--white);
 }
 
 
