--- a/css/new.css
+++ b/css/new.css
@@ -3,15 +3,13 @@
   min-height: 100vh;
   align-items: center;
   padding-top: 10vh 0;
-  background-image: url(../images/backhome.webp);
-  background-size: cover;
-  background-position: bottom;
   z-index: 0;
 }
 
 .new .new_info {
   padding-left: 5vh;
-  padding-top: 8vh;
+  padding-top: 20vh;
+  text-align: center;
 }
 
 
@@ -19,9 +17,9 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 1rem;
-  justify-content: center;
+  gap: 2rem;
   padding: 2rem;
+  justify-content: center;
 }
 
 .clickable-image-wrapper {
@@ -71,7 +69,7 @@
 }
 
 .clickable-image-wrapper:hover .overlay {
-    background-color: rgba(67, 56, 202, 0.75);
+    background-color: rgba(62, 0, 71, 0.75);
 }
 
 .clickable-image-wrapper:hover img {
