--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,13 @@
 }
 
 body {
-  background: url(../images/pattern.png) repeat top left, var(--grey);
   font-size: 100%;
   height: 100%;
+  background-image: url(../images/back.webp);
+  background-color: var(--grey);
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-position: center center;
 }
 
 h1 {
