--- a/css/pres.css
+++ b/css/pres.css
@@ -51,10 +51,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
 }
-
-
 
 
 @media (max-width: 768px) {
